# Sichergo

./: .gitignore  README.md  README.md~
docs/: typaBLE.csv
docs/lm/left/: sichergo-left.csv
docs/output/left/: sichergo-left-B_Cu.dxf  sichergo-left-B_Cu.gbr  sichergo-left-B_Mask.dxf  sichergo-left-B_Mask.gbr  sichergo-left-B_Paste.gbr  sichergo-left-B_Silkscreen.gbr  sichergo-left-Edge_Cuts.gbr  sichergo-left-F_Cu.dxf  sichergo-left-F_Cu.gbr  sichergo-left-F_Mask.dxf  sichergo-left-F_Mask.gbr  sichergo-left-F_Paste.dxf  sichergo-left-F_Paste.gbr  sichergo-left-F_Silkscreen.dxf  sichergo-left-F_Silkscreen.gbr  sichergo-left-In1_Cu.gbr  sichergo-left-NPTH.drl  (+3 more)
fw/Keyberon/: Cargo.toml
fw/rust/sichergo-master/: Cargo.toml  Cargo.toml~
fw/rust/sichergo-master/src/: main.rs  main.rs~
fw/sichergo/: Cargo.toml
fw/sichergo/src/: main.rs
lib/personal.pretty/: Gateron_Milky_Yellow.kicad_mod
sichergo/: KbdL.kicad_sch  KbdR.kicad_sch  MatrixL.kicad_sch  MatrixR.kicad_sch  fp-info-cache  sichergo.kicad_pcb  sichergo.kicad_pro  sichergo.kicad_sch
sichergo-left/: #auto_saved_files#  .gitignore  MatrixL.kicad_sch  sichergo-left.kicad_pcb  sichergo-left.kicad_prl  sichergo-left.kicad_pro  sichergo-left.kicad_sch
sichergo-right/: InterTypeC.kicad_sch  MatrixR.kicad_sch  fp-info-cache  sichergo-right.kicad_pcb  sichergo-right.kicad_prl  sichergo-right.kicad_pro  sichergo-right.kicad_sch
std/: all-board.20250214-175419.FCBak  all-board.FCStd  imola.dxf  left-trimmed.dxf  prot-left.dxf  prot-right.dxf  right-Sketch.dxf  right.FCStd  sichergo-right.dxf  switches-left.dxf
(+10 files in other folders)
